--- a/index.html
+++ b/index.html
@@ -4,9 +4,186 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <title>Static Template</title>    
+    <style>
+       h1 {
+          text-align: center;
+          width: 100%;
+          height: 100%;
+        }
+
+        main {
+          max-width: 2000px;
+          margin: 0 auto;
+          padding: 1rem;
+        }
+        section {
+          margin: 0 auto;
+          scroll-snap-type: x mandatory;
+          scroll-behavior: smooth;
+          scroll-snap-align: center;
+          overflow-x: scroll;
+          width: calc(100vw - 2rem);
+        }
+
+        section::-webkit-scrollbar {
+          display: none;
+        }
+
+        article#carousel {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          gap: 3.5rem;
+          width: fit-content;
+        }
+
+        @media screen and (min-width: 768px) {
+          section {
+            width: 500px;
+          }
+
+          article#carousel {
+            gap: 6rem;
+          }
+        }
+
+        div.slide {
+          display: block;
+          background-color: rgb(137, 145, 228);
+          width: 270px;
+          height: 270px;
+          max-width: 300px;
+          position: relative;
+          scroll-snap-align: center;
+          -webkit-box-align: center;
+          aspect-ratio: 1/1;
+          box-sizing: border-box;
+          margin: 0px auto;
+          overflow: hidden;
+        } 
+
+        div.slide:target .img {
+          animation: slideActive 0.8s;
+          direction: backwards;
+        }
+
+        @keyframes slideActive {
+          0% {
+            transform: scale(1.2);
+          }
+          100% {
+            transform: scale(1.0);
+          }
+        }
+
+        div > .img {
+          display: block;
+          position: relative;
+          aspect-ratio: 1/1;
+          height: auto;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+
+        article#carousel > div:first-child,
+        article#carousel > div:last-child {
+          visibility: hidden;
+        }
+
+        article#segment > a:first-child,
+        article#segment > a:last-child {
+          display: none;
+        }
+
+        article#segment {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 0.1rem;
+          margin: 1rem 0;
+        }
+
+        .segmentButton {
+          padding: 0.25rem 1.5rem;
+          border-radius: 20%;
+          background-color: #ccc;
+          cursor: pointer;
+          text-align: center;
+        }
+
+        @media screen and (min-width: 768px) {
+          .segmentButton {
+            padding: 0.25rem 1.5rem;
+          }
+        }
+
+        .segmentButton:hover {
+          background-color: #aaa;
+        }
+
+        .segmentButton:active {
+          background-color: #888;
+        }
+    </style>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <main>
+      <h1>css only carousel</h1>
+        <p>
+          go ahead and disable the javascript 
+        </p>
+        <code>cmd + shift + p > 'disable javascript'</code>
+        <p>and refresh the page</p>
+
+        <noscript>
+          <!-- anchor linking to external file -->
+          <h2>🎉 javascript is disabled 🎉</h2> 
+          <h3>now enjoy the carousel</h3>
+        </noscript>
+      <section id="gallery">
+        <article id="carousel">
+            <div id="slide-0" class="slide">
+              <img class="img" src="https://picsum.photos/id/1000/800" loading="lazy" alt="slide-0" />
+            </div>
+            <div id="slide-1" class="slide">
+              <img class="img" src="https://picsum.photos/id/1001/800" loading="lazy" alt="slide-1" />
+            </div>
+            <div id="slide-2" class="slide">
+              <img class="img" src="https://picsum.photos/id/1002/800" loading="lazy" alt="slide-2" />
+            </div>
+            <div id="slide-3" class="slide">
+              <img class="img" src="https://picsum.photos/id/1003/800" loading="lazy" alt="slide-3" />
+            </div>
+            <div id="slide-4" class="slide">
+              <img class="img" src="https://picsum.photos/id/1004/800" loading="lazy" alt="slide-4" />
+            </div>
+            <div id="slide-5" class="slide">
+              <img class="img" src="https://picsum.photos/id/1005/800" loading="lazy" alt="slide-5" />
+            </div>
+            <div id="slide-6" class="slide">
+              <img class="img" src="https://picsum.photos/id/1006/800" loading="lazy" alt="slide-6" />
+            </div>
+            <div id="slide-7" class="slide">
+              <img class="img" src="https://picsum.photos/id/1007/800" loading="lazy" alt="slide-7" />
+            </div>
+            <div id="slide-8" class="slide">
+              <img class="img" src="https://picsum.photos/id/1008/800" loading="lazy" alt="slide-8" />
+            </div>
+        </article>
+      </section>
+      <article id="segment">
+          <a href="#slide-0" class="segmentButton"></a>
+          <a href="#slide-1" class="segmentButton"></a>
+          <a href="#slide-2" class="segmentButton"></a>
+          <a href="#slide-3" class="segmentButton"></a>
+          <a href="#slide-4" class="segmentButton"></a>
+          <a href="#slide-5" class="segmentButton"></a>
+          <a href="#slide-6" class="segmentButton"></a>
+          <a href="#slide-7" class="segmentButton"></a>
+          <a href="#slide-8" class="segmentButton"></a>
+      </article>
+    </main>
   </body>
 </html>
