--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Template</title>    
     <style>
+      	* {
+        font-family: 'Open Sans', sans-serif;
+        text-align: center;
+      }
+
+      body {
+        margin: 0;
+      }
+    
+      	* {
+          font-family: 'Open Sans', sans-serif;
+          text-align: center;
+        }
+
+        body {
+          margin: 0;
+        }
+    
        h1 {
           text-align: center;
           width: 100%;
@@ -24,6 +42,7 @@
           scroll-snap-align: center;
           overflow-x: scroll;
           width: calc(100vw - 2rem);
+          height: 22rem;
         }
 
         section::-webkit-scrollbar {
@@ -36,6 +55,7 @@
           flex-wrap: nowrap;
           gap: 3.5rem;
           width: fit-content;
+          margin-top: 2rem;
         }
 
         @media screen and (min-width: 768px) {
@@ -61,6 +81,8 @@
           box-sizing: border-box;
           margin: 0px auto;
           overflow: hidden;
+          border-radius: 3rem;
+          box-shadow: 0px 0px 18px 2px rgba(0,0,0,0.51);
         } 
 
         div.slide:target .img {
@@ -70,7 +92,7 @@
 
         @keyframes slideActive {
           0% {
-            transform: scale(1.2);
+            transform: scale(1.6);
           }
           100% {
             transform: scale(1.0);
@@ -107,10 +129,11 @@
 
         .segmentButton {
           padding: 0.25rem 1.5rem;
-          border-radius: 20%;
+          border-radius: 1rem;
           background-color: #ccc;
           cursor: pointer;
           text-align: center;
+          height: 1rem;
         }
 
         @media screen and (min-width: 768px) {
@@ -166,7 +189,7 @@
               <img class="img" src="https://picsum.photos/id/1006/800" loading="lazy" alt="slide-6" />
             </div>
             <div id="slide-7" class="slide">
-              <img class="img" src="https://picsum.photos/id/1007/800" loading="lazy" alt="slide-7" />
+              <img class="img" src="https://picsum.photos/id/1008/800" loading="lazy" alt="slide-7" />
             </div>
             <div id="slide-8" class="slide">
               <img class="img" src="https://picsum.photos/id/1008/800" loading="lazy" alt="slide-8" />
